@@ -20,5 +20,6 @@ Other contributors (as mentionend in :copyright:s) are:
 - Varun Hiremath <varunhiremath@gmail.com>
 - Jeremy Thurgood
 - Matthew Harrison
+- Steven Hazel
 
 Many thanks for all your contributions!
