@@ -5,6 +5,10 @@ Version 1.0
 -----------
 (codename not selected, released XXX YY, 2007)
 
+- Lexers added:
+
+  * Tcl
+
 
 Version 0.9
 -----------
